--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navbar -->
     <div class="navbar">
-        <div class="container">
+        <div class="container flex">
             <h1 class="logo">Loruki.</h1>
             <nav>
                 <ul>
