--- a/index.html
+++ b/index.html
@@ -21,5 +21,35 @@
             </nav>
         </div>
     </div>
+    <!-- /Navbar -->
+
+    <!-- Showcase -->
+    <section class="showcase">
+        <div class="container grid">
+            <div class="showcase-text">
+                <h1>Easier Deployment</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos rem qui commodi illum facilis distinctio excepturi temporibus beatae impedit aliquid!</p>
+                <a href="features.html" class="btn btn-outline">Read More</a>
+            </div>
+
+            <div class="showcase-form card">
+                    <h2>Request a Demo</h2>
+                    <form>
+                        <div class="form-control">
+                            <input type="text" name="name" placeholder="Name" required>
+                        </div>
+                        <div class="form-control">
+                            <input type="text" name="company" placeholder="Company Name" required>
+                        </div>
+                        <div class="form-control">
+                            <input type="text" name="email" placeholder="Email" required>
+                        </div>
+
+                        <input type="submit" value="Send" class="btn btn-primary">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
