--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
             </div>
         </div>
     </section>
+    <!-- /Cli -->
+
+    <!-- Cloud -->
+    <section class="cloud bg-primary my-2 py-2">
+        <div class="container grid">
+            <div class="text-center">
+                <h2 class="lg">Extreme Cloud Hosting</h2>
+                <p class="lead my-1">Cloud hosting like you-ve never seen. Fast, efficient and scalable</p>
+                <a href="features.html" class="btn btn-dark">Read More</a>
+            </div>
+            <img src="images/cloud.png" alt="">
+        </div>
+    </section>
+    <!-- /Cloud -->
 
 </body>
 </html>
